# rusty

./: .env.example  Cargo.toml  RELEASE_NOTES.md
.github/workflows/: release.yml
crates/itc-anchor/: Cargo.toml
crates/itc-anchor/src/: lib.rs  payload.rs  poster.rs  rpc.rs  signer.rs  tx.rs
crates/itc-evm/: Cargo.toml
crates/itc-evm/src/: executor.rs  lib.rs  state.rs
crates/itc-node/: Cargo.toml
crates/itc-node/src/: anchor.rs  blocks.rs  chain.rs  main.rs  relay.rs  sequencer.rs  serve.rs  store.rs  sync.rs  wallet.rs
crates/itc-node/src/p2p/: mod.rs
crates/itc-oracle/: Cargo.toml
crates/itc-oracle/src/: deposit.rs  exit.rs  lib.rs  oracle.rs  utxo.rs
crates/itc-proto/: Cargo.toml
crates/itc-proto/src/: block.rs  consensus.rs  hashes.rs  lib.rs  message.rs  script.rs  seam.rs  signer_util.rs  tx.rs  work.rs
crates/itc-rpc/: Cargo.toml
crates/itc-rpc/src/: handler.rs  lib.rs  server.rs  types.rs
