[workspace]
resolver = "2"
members = ["crates/itc-proto", "crates/itc-node", "crates/itc-evm", "crates/itc-anchor", "crates/itc-rpc", "crates/itc-oracle"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Interchained LLC"]

# Single source of truth for the nedb-engine git pin. Every crate that touches
# storage (itc-node, itc-evm, itc-anchor, itc-oracle, itc-rpc) MUST reference
# this via `nedb-engine.workspace = true` rather than declaring its own git+tag
# line. Cargo treats two different tags/revs of the same git dependency as two
# DIFFERENT types (even when the source is identical where they overlap) — a
# crate left on an older tag while another was bumped fails to compile with
# "expected nedb_engine::db::Db, found Db" the moment a Db value crosses a
# function boundary between them. One line to bump here keeps the whole
# workspace on one resolved copy, structurally, instead of relying on every
# future bump remembering to touch N Cargo.tomls in lockstep.
[workspace.dependencies]
nedb-engine = { git = "https://github.com/Eth-Interchained/nedb", tag = "v2.5.45", package = "nedb-engine" }
