[workspace]
resolver = "2"
members = ["crates/itc-proto", "crates/itc-node", "crates/itc-evm", "crates/itc-anchor", "crates/itc-rpc", "crates/itc-oracle"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Interchained LLC"]

# Single source of truth for the nedb-engine git pin. Every crate that touches
# storage (itc-node, itc-evm, itc-anchor, itc-oracle, itc-rpc) MUST reference
# this via `nedb-engine.workspace = true` rather than declaring its own git+tag
# line. Cargo treats two different tags/revs of the same git dependency as two
# DIFFERENT types (even when the source is identical where they overlap) — a
# crate left on an older tag while another was bumped fails to compile with
# "expected nedb_engine::db::Db, found Db" the moment a Db value crosses a
# function boundary between them. One line to bump here keeps the whole
# workspace on one resolved copy, structurally, instead of relying on every
# future bump remembering to touch N Cargo.tomls in lockstep.
[workspace.dependencies]
# v2.6.1: cached segment read handles + positional reads (pread) on every point
# read; six 2.5.55 correctness fixes (id-index WAL flush race under same-key
# churn — exactly the l2_pending_exits/evm_accounts rewrite shape — seq-guarded
# durable tips, MANIFEST fsync ordering, NQL LIMIT, batch index parity,
# cold-scan seq off-by-one); lazy MANIFEST upgrade (no forced multi-million-
# object rescan on pre-2.5.43 datadirs). Matters more now that the sequencer
# flushes every state-changing block.
nedb-engine = { git = "https://github.com/Eth-Interchained/nedb", tag = "v2.6.1", package = "nedb-engine" }
