[package]
name = "itc-node"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Standalone instant-boot, trust-the-anchor ITC relay peer (Proof of Sovereignty)."

[[bin]]
name = "itc-node"
path = "src/main.rs"

[dependencies]
itc-proto = { path = "../itc-proto" }
