[package]
name = "itc-node"
version = "0.5.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Standalone instant-boot, trust-the-anchor ITC relay peer (Proof of Sovereignty)."

[[bin]]
name = "itc-node"
path = "src/main.rs"

[dependencies]
itc-proto = { path = "../itc-proto" }
# The NEDB v2 engine, used directly as the storage backend (already Rust — no FFI).
nedb-engine = { git = "https://github.com/Eth-Interchained/nedb", package = "nedb-engine" }
serde_json = "1"
itc-anchor = { path = "../itc-anchor" }
