[package]
name = "itc-oracle"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ITC-L2 deposit oracle — scans ITC L1 blocks for bridge deposits and mints native aITC."

[dependencies]
itc-proto  = { path = "../itc-proto" }
itc-evm    = { path = "../itc-evm" }

nedb-engine = { git = "https://github.com/Eth-Interchained/nedb", package = "nedb-engine" }
serde_json  = "1"
hex         = "0.4"
