[package]
name = "itc-oracle"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ITC-L2 deposit oracle, UTXO mirror, and exit flow."

[dependencies]
itc-proto  = { path = "../itc-proto" }
itc-evm    = { path = "../itc-evm" }
itc-anchor = { path = "../itc-anchor" }

nedb-engine = { git = "https://github.com/Eth-Interchained/nedb", package = "nedb-engine" }
serde_json  = "1"
hex         = "0.4"
