[package]
name = "itc-oracle"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ITC-L2 deposit oracle, UTXO mirror, and exit flow."

[dependencies]
itc-proto  = { path = "../itc-proto" }
itc-evm    = { path = "../itc-evm" }
itc-anchor = { path = "../itc-anchor" }

nedb-engine = { git = "https://github.com/Eth-Interchained/nedb", package = "nedb-engine" }
serde_json = "1"
hex        = "0.4"

# bech32 — decode ITC_BRIDGE_ADDRESS (itc1q…) to hash160.
# Used in OracleConfig::from_env() / hash160_from_bech32_address().
# Version 0.9 is the last release that exports the convenient
# bech32::decode + FromBase32 API used here.
bech32 = "0.9"
