[package]
name = "itc-proto"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ITC network protocol layer (a fork of the Bitcoin P2P wire protocol, owned in-tree) — real wire serialization, message types, block header, and the NEDB Proof-of-Prefix seam."

[dependencies]
sha2 = "0.10"
