[package]
name = "itc-rpc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ITC-L2 eth_* JSON-RPC server — MetaMask-compatible Ethereum JSON-RPC over HTTP."

[dependencies]
itc-evm   = { path = "../itc-evm" }
itc-proto = { path = "../itc-proto" }

# Minimal HTTP server — tiny, no async runtime needed for v1 (thread-per-connection)
tiny_http = "0.12"

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
hex        = "0.4"

# RLP decoding for raw Ethereum transactions (eth_sendRawTransaction)
rlp = "0.5"
